Fix clearance section overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -962,6 +962,8 @@ form {
     display: flex;
     flex-flow: column nowrap;
     background-color: var(--primary);
+    margin: 100px;
+    overflow-y:scroll;
     
 }
 fieldset {
